--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<link href="atom.xml" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed" />
 			{% feed_meta %}
 		</head>
 		<body>
