--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-	<html>
-		<head>
-<<<<<<< HEAD
-			<meta charset="utf-8" />
-=======
-			<link href="/blog/feed.xml" type="application/rss+xml" rel="alternate" title="Latest 10 blog posts (atom)" />
->>>>>>> 8df8d7abcc5c73749896ebc36ec475dec3ac12f1
-			<title>{{ page.title }}</title>
-			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
-			<link href="atom.xml" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed" />
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<link href="/feed.xml" type="application/rss+xml" rel="alternate" title="Latest 10 blog posts (atom)" />
+		<title>{{ page.title }}</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 			
 		</head>
 		<body>
@@ -30,6 +26,7 @@
 	    		<ul>
 	        		<li><a href="mailto:wetson@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/wetson">github.com/wetson</a></li>
+				<li><a href="https://wetson.github.io/feed.xml">欢迎订阅我的博客</a></li>
 				</ul>
 			</footer>
 		</body>
