--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -1,38 +1,24 @@
 ---
 layout: default
 ---
-<!--
-  这里是 category_index.html 文件，里面使用到的一些 DOM 结构依赖 pizn.me 的样式。但您可以只参考里面的 jekyll 语法就好。这里的作用是显示出 category 分类列表。
--->
-<section class="content fn-clear">
-	<div class="content-cnt">
-    <div class="ui-grid-25 ui-grid-right content-top">
-            <section class="ui-grid-19 violet-post">
-                <div class="v-section-tit">
-                	<a href="/" rel="nofollow" >Home</a>
-                    <span>&#9830;</span>
-                    <a href="/archives.html" rel="nofollow" >Archives</a>
-                    <span>&#9830;</span>
-                    <h2>Category:&nbsp;&nbsp;{{ page.category }}</h2>
-                </div>
-                {% for post in site.categories.[page.category] %}
-                <div class="violet-archive fn-clear">
-                	<p class="ui-grid-2 year">{{ post.date | date: '%Y' }}</p>
-                	<div class="ui-grid-17 ui-grid-right ui-grid-bottom">
-                		<article class="article fn-clear">
-                            <div class="ui-grid-6 v-archive-tit">
-                                <p class="v-date"><span>&#8227;</span><time pubdate="{{ post.date | date: '%b %d, %Y' }}">{{ post.date | date: '%b %d' }}</time></p>
-                                <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-                            </div>
-                            <div class="ui-grid-11 v-archive-det">
-                                <p>{{ post.description }}</p>
-                            </div>
-                        </article><!-- //archive -->
-                	</div>
-            	</div>
-            	{% endfor %}                            
-            </section><!-- //violet-post -->
-            {% include aside.html %}
-        </div>
-	</div>
-</section><!-- //content -->
+<h2>\{\{ page.title }}</h2>
+<div class="row">
+	<ul class="col s12 m10 section">
+	　　{\% for post in site.categories.[page.category] %}
+	　　　　<li class="card blog-item" data-category="\{\{post.category}}">
+				<div class="card-content">
+					<div class="card-title"><a href="/blog\{\{ post.url }}">\{\{ post.title }}</a></div>
+				  	<p class="excerpt">\{\{ post.excerpt | remove: '<p>' | remove: '</p>' }}</p>
+					<p>\{\{ post.date | date: "%Y年%m月%d日" }}</p>
+				</div>
+			</li>
+	　　{\% endfor %}
+	</ul>
+</div>
+<ul class="sidebar">
+	<li><a class="sidebar-btn" href="\{\{site.baseurl}}" data-category="all">all</a></li>
+	{\% for category in site.categories %}
+	        {\% for post in category.first %}<li><a class="sidebar-btn" href="\{\{site.baseurl}}/categories/\{\{ category | first }}" data-category="\{\{category.first}}">(\{\{category.last.size}})</a></li>
+	        {\% endfor %}
+	{\% endfor %}
+</ul>
