--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -7,7 +7,7 @@ layout: default
 	　　{% for post in site.categories.[page.category] %}
 	　　　　<li class="card blog-item" data-category="{{post.category}}">
 				<div class="card-content">
-					<div class="card-title"><a href="/blog{{ post.url }}">{{ post.title }}</a></div>
+					<div class="card-title"><a href="{{ post.url }}">{{ post.title }}</a></div>
 				  	<p class="excerpt">{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</p>
 					<p>{{ post.date | date: "%Y年%m月%d日" }}</p>
 				</div>
@@ -16,9 +16,9 @@ layout: default
 	</ul>
 </div>
 <ul class="sidebar">
-	<li><a class="sidebar-btn" href="{{site.baseurl}}" data-category="all">all</a></li>
+	<li><a class="sidebar-btn" href="{{site.url}}" data-category="all">all</a></li>
 	{% for category in site.categories %}
-	        {% for post in category.first %}<li><a class="sidebar-btn" href="{{site.baseurl}}/categories/{{ category | first }}" data-category="{{category.first}}">({{category.last.size}})</a></li>
+	        {% for post in category.first %}<li><a class="sidebar-btn" href="/categories/{{ category | first }}" data-category="{{category.first}}">{{category.first}}({{category.last.size}})</a></li>
 	        {% endfor %}
 	{% endfor %}
 </ul>
